feat: Catch error and just log info